fix: dark mode styles

--- a/src/styles/artist/artist.less
+++ b/src/styles/artist/artist.less
@@ -57,6 +57,9 @@
 
 .dark {
   .artist-container {
+    & > .el-loading-mask {
+      background-color: lighten(@color-background-dark, 2.5%) !important;
+    }
     .artist-header {
       &-close {
         color: darken(@color-text-primary, 2.5%);
